# MATH-AI

./: .yamllint  10 steps.markdown  DAG开发需求.md  DAG技术框架？.md  README.md  UI.md  UI_understanding.markdown  pyproject.toml  run.ps1  几大场景.md
apps/gateway/: main.py  requirements.txt
apps/gateway/alembic/versions/: a9757885287a_init_tables.py
apps/gateway/models/: problem.py
docs/: sequence-diagrams.md  workflows-and-prompts.md
infra/: docker-compose.yml
math-copilot/: .env.example  .gitignore  .pre-commit-config.yaml  .yamllint  README.md  ci_block_service.sh  ci_local.sh  ci_mvp.sh  pyproject.toml  run.ps1  run_full_tests.sh  run_v0.5_tests.sh  右侧大模型三个块.md  总体设计.md
math-copilot/apps/gateway/: __init__.py  alembic.ini  db.py  logging_setup.py  main.py  models.py  settings.py
math-copilot/apps/gateway/alembic/: env.py
math-copilot/apps/gateway/alembic/versions/: a9757885287a_init_tables.py  e53e177af130_add_block_state_and_others.py
math-copilot/apps/gateway/models/: __init__.py  block.py  event.py  problem.py
math-copilot/apps/gateway/routers/: __init__.py  blocks_router.py  llm.py
math-copilot/apps/gateway/schemas/: .placeholder  agents.py
math-copilot/apps/gateway/services/: block_service.py  event_bus.py  llm_router.py  llm_router_real.py
math-copilot/apps/gateway/static/: test.html
math-copilot/apps/gateway/workflows/: __init__.py  block_parse.py  latex_refine.py  problem_ingest.py
math-copilot/infra/: docker-compose.yml
math-copilot/scripts/: seed.py
math-copilot/tests/: test_block_service.py  test_model.py  test_router_stub.py  test_workflow_ingest.py
prompts/: Dot.xml  Pot.xml  latex大模型.xml  一步解答.xml  多cot.xml  思路块check.xml  总结.xml  总结归纳大模型.xml  深入解析大模型.xml  识别题目.xml
prompts/Ref/: prompt_total.xml  模版.xml
scripts/: seed.py
tests/: test_model.py
