[tool.poetry]
name = "math-copilot"
version = "0.2.0"
description = "Prompt Engine tag v0.2.0"
authors = ["Your Name <you@example.com>"] # Please replace with your details later
readme = "README.md" # Assuming you have a README
package-mode = false # Tell Poetry not to treat the project as a standard package

[tool.poetry.dependencies]
python = ">=3.11,<3.12" # Matching the spec
sqlmodel = "^0.0.14"
alembic = "^1.13"
pydantic-settings = "^2.2"     # For potential future .env reading
psycopg2-binary = {version = "^2.9.9", optional = true} # Keep for potential PG switch, but optional
PyYAML = "^6.0" # ★ Added PyYAML

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.0" # Example version, can be latest
ruff = "^0.1.0" # Example version, add ruff for linting/formatting

[tool.poetry.extras]
postgres = ["psycopg2-binary"]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
pythonpath = [
  "."
]

[tool.ruff]
select = ["E", "F", "I"] # Select Error, Pyflakes, isort codes
line-length = 120 