[tool.poetry]
name = "math-copilot"
version = "0.2.0"
description = "Prompt Engine tag v0.2.0"
authors = ["Your Name <you@example.com>"] # Please replace with your details later
readme = "README.md" # Assuming you have a README
# package-mode = false # Tell Poetry not to treat the project as a standard package
packages = [
  { include = "apps" },
  { include = "packages" }
]

[tool.poetry.dependencies]
python = ">=3.11,<3.12" # Matching the spec
sqlmodel = "^0.0.14"
alembic = "^1.13"
pydantic-settings = "^2.2"     # For potential future .env reading
psycopg2-binary = {version = "^2.9.9", optional = true} # Keep for potential PG switch, but optional
PyYAML = "^6.0" # ★ Added PyYAML
fastapi = "^0.115.12"
uvicorn = {extras = ["standard"], version = "^0.34.2"}
loguru = "^0.7.3"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.0" # Example version, can be latest
ruff = "^0.1.0" # Example version, add ruff for linting/formatting
mypy = "^1.15.0"
pre-commit = "^4.2.0"
pytest-asyncio = ">=0.23.7,<0.24.0"
types-pyyaml = "^6.0.12.20250402"

[tool.poetry.extras]
postgres = ["psycopg2-binary"]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
pythonpath = [
  "."
]

[tool.lint]
select = ["E", "F", "I"] # Select Error, Pyflakes, isort codes
line-length = 120
# ignore = [] # Add specific ignores if needed, e.g., ignore = ["E402"]

[tool.ruff.format]
# Optional: Add formatting specific settings if needed
# quote-style = "double"

[tool.mypy]
# Example minimal configuration
python_version = "3.11"
ignore_missing_imports = true
exclude = ["scripts/"] # Exclude the entire scripts directory
# warn_return_any = true
# warn_unused_configs = true
